Fix up sloppy Mason job

--- a/README.Rmd
+++ b/README.Rmd
@@ -12,20 +12,19 @@ knitr::opts_chunk$set(
 
 > Debug R Packages
 
-[![Linux Build Status](https://travis-ci.org//debugme.svg?branch=master)](https://travis-ci.org//debugme)
-
-[![Windows Build status](https://ci.appveyor.com/api/projects/status/github//debugme?svg=true)](https://ci.appveyor.com/project//debugme)
+[![Linux Build Status](https://travis-ci.org/gaborcsardi/debugme.svg?branch=master)](https://travis-ci.org/gaborcsardi/debugme)
+[![Windows Build status](https://ci.appveyor.com/api/projects/status/github/gaborcsardi/debugme?svg=true)](https://ci.appveyor.com/project/gaborcsardi/debugme)
 [![](http://www.r-pkg.org/badges/version/debugme)](http://www.r-pkg.org/pkg/debugme)
 [![CRAN RStudio mirror downloads](http://cranlogs.r-pkg.org/badges/debugme)](http://www.r-pkg.org/pkg/debugme)
 
 
 Specify debug messages as special string constants, and control debugging of
-  packages via environment variables.
+packages via environment variables.
 
 ## Installation
 
 ```{r eval = FALSE}
-devtools::install_github("/debugme")
+source("https://install-github.me/gaborcsardi/debugme")
 ```
 
 ## Usage
@@ -36,4 +35,4 @@ library(debugme)
 
 ## License
 
-MIT + file LICENSE © 
+MIT © [Gábor Csárdi](https://github.com/gaborcsardi)
