--- a/inst/README.Rmd
+++ b/inst/README.Rmd
@@ -110,15 +110,16 @@ If you never want to worry about the log messages making your code slower,
 you will like `debugme`. `debugme` debug strings have practically no
 performance penalty when debugging is off.
 
-Here is a simple comparison between debugging with a function call, `f1()`,
-debugging with debug strings, `f2()` and no debugging at all.
+Here is a simple comparison to evaluate debugging overhead with a function call, `f1()`,
+debugging with debug strings, `f2()`, and no debugging at all.
 
 ```{r}
-debug <- function(msg) { cat(msg, file = "/dev/null", "\n") }
+debug <- function(msg) { }
 f1 <- function() {
   for (i in 1:100) {
     debug("foobar")
-    Sys.sleep(.001)
+    # Avoid optimizing away the loop
+    i <- i + 1
   }
 }
 ```
@@ -127,7 +128,8 @@ f1 <- function() {
 f2 <- function() {
   for (i in 1:100) {
     "!DEBUG foobar"
-    Sys.sleep(.001)
+    # Avoid optimizing away the loop
+    i <- i + 1
   }
 }
 ```
@@ -135,13 +137,14 @@ f2 <- function() {
 ```{r}
 f3 <- function() {
   for (i in 1:100) {
-    Sys.sleep(.001)
+    # Avoid optimizing away the loop
+    i <- i + 1
   }
 }
 ```
 
 ```{r}
-microbenchmark::microbenchmark(f1(), f2(), f3(), times = 10L)
+microbenchmark::microbenchmark(f1(), f2(), f3())
 ```
 
 ## License
