Do not suggest dev version in README`

--- a/inst/README.Rmd
+++ b/inst/README.Rmd
@@ -24,10 +24,8 @@ the [`debug` npm package](https://github.com/visionmedia/debug).
 
 ## Installation and Usage
 
-Install the package from GitHub:
-
 ```{r eval = FALSE}
-source("https://install-github.me/r-lib/debugme")
+install.packages("debugme")
 ```
 
 To use `debugme` in your package, import it, and then add the following
