Fix README image

--- a/README.Rmd
+++ b/README.Rmd
@@ -85,7 +85,7 @@ terminal supports color, will be colored differently for each package.
 
 ## Example
 
-![](inst/screencast.gif)
+![](/screencast.gif)
 
 ## Dynamic code
 
